Persisted Gsod to database; implemented id & date search